# Second-homework

./: CMakeLists.txt  LICENSE  README.md
SecondHW_p1/: config.h.in
SecondHW_p1/test/: test_power.cpp
SecondHW_p2/: CMakeLists.txt  main.cpp
